--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"elemental_ip": "192.168.2.80", "elemental_user": "admin", "elemental_pass": "password", "gpi_to_stream_map": {"13": "3", "17": "7"}, "min_avail_enabled": true, "min_avail_duration": 5.0}
+{"elemental_ip": "192.168.2.10", "elemental_user": "admin", "elemental_pass": "password", "gpi_to_stream_map": {"12": "5"}, "min_avail_enabled": true, "min_avail_duration": 5.0}
