--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Chris\\.virtualenvs\\cli_pipenv-bZQtY5ya\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\Chris\\.virtualenvs\\cmder-9WRTu3cO\\Scripts\\python.exe"
 }
